fix d20 sides in workshop overflowing, minor tweaks to css

--- a/src/css/game.css
+++ b/src/css/game.css
@@ -170,6 +170,8 @@ tr:nth-child(odd) {
 	overflow-y: auto;
   overflow-x: hidden;
   transition: right 0.5s;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 #gameLogs.collapsed {
